Use consistent syntax for formatted strings